--- a/glow.html
+++ b/glow.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <h1>
+            <!--Text-->
             <span>WELCOME</span>
             <span>TO</span>
             <span>MY</span>
